base/src/test/resources/failure/patterns/issue302.aya.txt
In file $FILE:4:4 ->

  2 |  | zero
  3 |  | suc Nat
  4 | def addN (a b : Nat) : Nat
  5 |  | zero, a => a
  6 |  | a, zero => a
  7 |  | suc a, b => suc (addN b a)
         ^------------------------^ substituted to `suc (addN (suc b) a)`
  8 |  | a, suc b => suc (addN a b)
         ^------------------------^ substituted to `suc (addN (suc a) b)`

Error: The 3rd and the 4th clauses are not confluent because we failed to unify `suc (addN (suc b) a)` and `suc (addN (suc a) b)`
What are you doing?
